experimental_configs/net_policy_cilium_wordpress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l3-rule"
spec:
  endpointSelector:
    matchLabels:
      app: my-release-pxc 
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: wwwppp-wordpress
  egress:
  - toEndpoints:
    - matchLabels:
        app: wwwppp-wordpress
