experimental_configs/net_policy_cilium_wordpress_between_dbds.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l3-rule-between-db-cluster"
spec:
  endpointSelector:
    matchLabels:
      app: my-release-pxc 
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: my-release-pxc
  egress:
  - toEndpoints:
    - matchLabels:
        app: my-release-pxc
